Fix Search-bar - Centre-aligned search input in navbar - Change search input background colour to dark - Showed `no results` if search query returns nothing - Defined css variable for background colour

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   --success: green;
   --link: #5799ef;
   --muted: #6c757d;
+  --background: #1f1f1f;
 }
 
 ::placeholder {
