--- a/src/assets/css/DetailPage.css
+++ b/src/assets/css/DetailPage.css
@@ -2,7 +2,7 @@
   width: 60%;
   min-height: 92vh;
   overflow: auto;
-  background-color: #1f1f1f;
+  background-color: var(--background);
   margin: 0 auto;
   border-radius: 5px;
   padding: 3rem 1rem;
