--- a/src/assets/css/Form.css
+++ b/src/assets/css/Form.css
@@ -65,6 +65,16 @@ input[type="checkbox"] {
   margin-right: 5px;
 }
 
+.input-dark {
+  background-color: var(--background);
+  color: white;
+}
+
+.input-dark::placeholder {
+  color: lightgray;
+  opacity: 1;
+}
+
 @media (max-width: 520px) {
   .form-container {
     width: 90%;
