--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -36,3 +36,9 @@ nav {
   background-color: var(--primary);
   color: var(--secondary);
 }
+
+.absolute-center {
+  position: absolute;
+  left: 29%;
+  right: 0;
+}
