--- a/src/assets/css/Person.css
+++ b/src/assets/css/Person.css
@@ -46,7 +46,7 @@
 }
 
 .known-for-titles .slider-card {
-  background-color: #1f1f1f;
+  background-color: var(--background);
   border-radius: 5px;
   box-shadow: 5px 2px 10px var(--secondary);
   margin-bottom: 30px;
